RESOLVED FIXED116636
[Mac] accessibility/document-attributes.html fails
https://bugs.webkit.org/show_bug.cgi?id=116636
Summary [Mac] accessibility/document-attributes.html fails
Ryosuke Niwa
Reported 2013-05-22 14:37:05 PDT
accessibility/document-attributes.html has been failing probably ever since the test was added.
Attachments
patch (6.41 KB, patch)
2015-08-25 10:42 PDT, Nan Wang
no flags
patch (6.38 KB, patch)
2015-08-25 11:02 PDT, Nan Wang
no flags
patch (6.38 KB, patch)
2015-08-25 11:46 PDT, Nan Wang
no flags
Radar WebKit Bug Importer
Comment 1 2014-02-07 11:31:56 PST
Nan Wang
Comment 2 2015-08-25 10:42:18 PDT
chris fleizach
Comment 3 2015-08-25 10:57:13 PDT
Comment on attachment 259859 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=259859&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:3061 > + if (document) this can be if (Document *doc = m_object->document()) return ... > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:3069 > + return document->encoding(); ditto
Nan Wang
Comment 4 2015-08-25 11:02:16 PDT
chris fleizach
Comment 5 2015-08-25 11:38:49 PDT
Comment on attachment 259862 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=259862&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:3060 > + if (Document *document = m_object->document()) * on wrong side > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:3066 > + if (Document *document = m_object->document()) * on wrong side
Nan Wang
Comment 6 2015-08-25 11:46:48 PDT
WebKit Commit Bot
Comment 7 2015-08-25 12:15:11 PDT
Comment on attachment 259865 [details] patch Clearing flags on attachment: 259865 Committed r188930: <http://trac.webkit.org/changeset/188930>
WebKit Commit Bot
Comment 8 2015-08-25 12:15:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.