[Mac] accessibility/document-attributes.html fails https://bugs.webkit.org/show_bug.cgi?id=116636

Patch by Nan Wang <n_wang@apple.com> on 2015-08-25
Reviewed by Chris Fleizach.

Source/WebCore:

Re-enabled accessibility/document-attributes.html test.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

Tools:

Implemented documentURI() and documentEncoding().

* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::documentEncoding):
(AccessibilityUIElement::documentURI):
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::documentEncoding):
(WTR::AccessibilityUIElement::documentURI):

LayoutTests:

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/166549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188930 268f45cc-cd09-0410-ab3c-d52691b4dbfc